# arrow

./: .gitignore  Cargo.toml  README.md
docs/: er-diagram.md
migrations/: V1__initial.sql  V2__add_logs.sql  V3__add_project_duration.sql
src/: cli.rs  lib.rs  main.rs  model.rs  project.rs  repository.rs  time.rs
src/log/: command.rs  handlers.rs  mod.rs  print.rs  repository.rs
src/print/: table.rs
src/project/: command.rs  handlers.rs  mod.rs  print.rs  repository.rs
